# engeto-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
src/: api.py  description.py  processor.py  text_processor.py
src/task_manager/: attributes.py  cleaner.py  description.py  parser.py  processor.py  tasknames.py  text_processor.py  utils.py
src/tests/: bar.xml  exercise.xml  exercise.xml   test_attributes.py  test_cleaner.py  test_description.py  test_parser.py  test_tasknames.py  test_text_processor.py
